--- a/DL_cat_dog_small_data.ipynb
+++ b/DL_cat_dog_small_data.ipynb
@@ -642,7 +642,7 @@
    "source": [
     "##### We train three classifiers for classifying images of cats and dogs. We trained three models with very limited data, i.e., 1000 images from each class. In the first model, we train on orginal images only, while in the second one we adopted a technique called data augmentation. Finally, the third model, we used the pre-trained network VGG16 embedding with our model. The results show that the last method obtains about 89% accurate, while the second and first obtain 74% and 69%, respectively. \n",
     "\n",
-    "##### Some regularization methods such as $ell_2$ and $ell_1$ may improve the performance of each m"
+    "##### Some regularization methods such as $\ell_2$ and $\ell_1$ may improve the performance of each m"
    ]
   },
   {
